# advanced-cpp-bhcc

./: .gitignore  CMakeLists.txt  README.md
assets/assignment_12/: output.txt
note/: cpp_20.md  crash_course.md  marc_gregoire.md  pointers.md
src/assessmnet/: Unit1Assessment.txt
src/assignment/1/: Database.cpp  Database.h  Student.cpp  Student.h  TestDatabase.cpp
src/assignment/11/: Application.cpp  Application.h  Student.cpp  Student.h  TestApplication.cpp
src/assignment/12/: HashTable.cpp  HashTable.h  Hashtable.cpp  Hashtable.h  Student.cpp  Student.h  StudentCourse.cpp  StudentCourse.h  TestStudent.cpp  TestStudentCourse.cpp
src/assignment/12_dated/: CSStudent_courses.txt  CSStudent_courses1.txt  StudentCourse.cpp  TestStudentCourse.cpp
src/assignment/2/ZhuojianChenCh11HW1/: bookshelf.cppm
src/assignment/2/ZhuojianChenCh11HW2/: DisplayCard.cppm  Item.cppm  bookshelf.cppm  testStoreShelf.cpp
src/assignment/2/ZhuojianChenCh11HW3/: DisplayCard.cppm  Item.cppm  bookshelf.cppm  testStoreShelf.cpp
src/assignment/2/ZhuojianChenCh11HW4/: DisplayCard.cppm  Internals.cppm  InternalsImplement.cppm  Item.cppm  testStoreShelf.cpp
src/assignment/3/: Amorphous.h  Circle.h  Rectangle.h  Shape.h  Square.h  TestShapes.cpp  Triangle.h  shapes.cpp
src/assignment/4/: BinaryLabBase.cpp
src/assignment/7/: CtorInitOrder2.cpp  CtorInitOrder2_Initialization.txt  CtorInitOrder3.cpp  CtorInitOrder3_Initialization.txt
src/assignment/7/user/: Secure.cpp  Secure.h  SuperUser.cpp  SuperUser.h  TestUsers.cpp  User.cpp  User.h
src/assignment/ZhuojianChenCh11HW1/: testStoreShelf.cpp
src/assignment/ZhuojianChenCh11HW2/: bookshelf.ixx  testStoreShelf.cpp
src/final/: README.md
src/final/doc/: user_story.md
src/final/src/: main.cpp
src/final/src/entity/: Category.cpp  Category.h  Date.cpp  Date.h  Record.cpp  Record.h  Subcategory.cpp  Subcategory.h  entities.h
src/final/src/util/: jest.cpp  jest.h
src/qt/Project1/: MainWindow.cpp  MainWindow.h  MainWindow.ui  Project1.pro  Task.cpp  Task.h  Task.ui
src/test/: IntIterator.h  any.cpp
src/test/bitwise_discussion/: README.md  Spiral.cpp  TurnAround.cpp
src/test/bitwise_on_int/: BitwiseOnInt.cpp
src/test/dependency_injection/: classes.h
src/unit/1_1/: Unit1Project1Answer.txt  americaNamespace.h  chinaNamespace.h  testNamespaces.cpp
src/unit/1_2/: Unit1Project2.cpp  Unit1Project2Answer.txt
src/unit/1_3/: Unit1Project3.cpp  Unit1Project3Answer.txt
src/unit/4_1/: Unit4Project1.cpp  Unit4Project1Answer.txt
src/unit/4_2/: TestWidgets.cpp  Unit4Project2.cpp  Unit4Project2Answer.txt  binaryOperations.cpp  settings.h
src/unit/7_1/: Matrix.cpp  Matrix.h  TestMatrix.cpp
src/unit/7_2/: Cylinder.cpp  Cylinder.h  CylinderGrid.cpp  CylinderGrid.h  TestCylinderGrid.cpp
